Fixed all misc backend and frontend bugs. Beta 1 is ready.

--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -98,6 +98,7 @@ android:layout_height="match_parent"
                     android:textColor="@color/labText"
                     android:theme="@style/MyEditText"
                     android:textStyle="bold"
+                    android:maxLength="8"
                     app:fontFamily="sans-serif-smallcaps"/>
 
                 <Button
@@ -119,9 +120,10 @@ android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/grid_basic_lab"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
+android:layout_marginEnd="10dp"
                 android:divider="@android:color/transparent"
                 android:dividerHeight="10.0sp"
                 android:isScrollContainer="false" />
@@ -177,6 +179,7 @@ android:layout_height="match_parent"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/labText"
             android:textSize="18dp"
+            android:maxLength="8"
             android:theme="@style/MyEditText"
             android:textStyle="bold"
             app:fontFamily="sans-serif-smallcaps"/>
@@ -201,7 +204,7 @@ android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/grid_CBC"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
@@ -226,7 +229,7 @@ android:layout_height="match_parent"
         android:padding="5dp"
 
         android:textColor="#FFFFFF"
-        android:textSize="26sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:typeface="normal"
         app:fontFamily="sans-serif-smallcaps"
@@ -286,6 +289,7 @@ android:layout_height="match_parent"
             android:textColor="@color/labText"
             android:theme="@style/MyEditText"
             android:textStyle="bold"
+            android:maxLength="8"
             app:fontFamily="sans-serif-smallcaps"/>
 
         <Button
@@ -308,7 +312,7 @@ android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/grid_generaltest"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
         android:layout_marginRight="20dp"
@@ -361,6 +365,7 @@ android:layout_height="match_parent"
             android:layout_row="0"
             android:layout_column="1"
             android:layout_marginLeft="5dp"
+            android:maxLength="8"
             android:inputType=""
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="18dp"
@@ -389,7 +394,7 @@ android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/grid_kidneytest"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
         android:layout_marginRight="20dp"
@@ -443,6 +448,7 @@ android:layout_height="match_parent"
             android:layout_row="0"
             android:layout_column="1"
             android:layout_marginLeft="5dp"
+            android:maxLength="8"
             android:inputType=""
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="18dp"
@@ -471,7 +477,7 @@ android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/grid_livertest"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
         android:layout_marginRight="20dp"
@@ -525,6 +531,7 @@ android:layout_height="match_parent"
             android:layout_column="1"
             android:layout_marginLeft="5dp"
             android:inputType=""
+            android:maxLength="8"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="18dp"
             android:textColor="@color/labText"
@@ -552,7 +559,7 @@ android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/grid_electrolytestest"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
         android:layout_marginRight="20dp"
@@ -569,7 +576,7 @@ android:layout_height="match_parent"
         android:layout_marginTop="5dp"
         android:layout_marginRight="2.5dp"
         android:layout_marginLeft="2.5dp"
-        android:layout_marginBottom="55dp">
+        android:layout_marginBottom="60dp">
     <TextView
         android:id="@+id/proteintest_text"
         android:layout_width="match_parent"
@@ -607,6 +614,7 @@ android:layout_height="match_parent"
             android:layout_column="1"
             android:layout_marginLeft="5dp"
             android:inputType=""
+            android:maxLength="8"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="18dp"
             android:textColor="@color/labText"
@@ -634,7 +642,7 @@ android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/grid_proteintest"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
         android:layout_marginRight="20dp"
@@ -686,6 +694,7 @@ android:layout_height="match_parent"
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="1"
+            android:maxLength="8"
             android:layout_marginLeft="5dp"
             android:inputType=""
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -715,7 +724,7 @@ android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/grid_lipidstest"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
         android:layout_marginRight="20dp"
