--- a/app/src/main/res/layout/activity_3.xml
+++ b/app/src/main/res/layout/activity_3.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
-    >
+    android:id="@+id/root">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
-        android:textSize="36sp"
+        android:textSize="26sp"
         android:textStyle="bold"
         android:typeface="normal"
         app:fontFamily="sans-serif-smallcaps"
@@ -61,20 +61,21 @@
                         android:textSize="24sp"
                         android:textStyle="bold"
                         app:fontFamily="sans-serif-condensed"/>
+
                     <EditText
-                        android:layout_width="150sp"
-                        android:layout_height="wrap_content"
                         android:id="@+id/tablet_name"
+                        android:layout_width="105sp"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="40dp"
                         android:hint="name"
                         android:inputType=""
+                        android:maxLength="13"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:textSize="18dp"
                         android:textColor="@color/medicationText"
-                        android:theme="@style/MyEditTextMedication"
+                        android:textSize="18dp"
                         android:textStyle="bold"
-                        app:fontFamily="sans-serif-smallcaps"
-                        />
+                        android:theme="@style/MyEditTextMedication"
+                        app:fontFamily="sans-serif-smallcaps" />
                 </LinearLayout>
 
 
