--- a/app/src/main/res/layout/medication_list.xml
+++ b/app/src/main/res/layout/medication_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="400dp"
     android:layout_height="match_parent"
     android:id="@+id/medicationListLayout"
     android:background="@color/medicationThird"
@@ -11,36 +11,38 @@
 
     <TextView
         android:id="@+id/tablet_name_text"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:text="TextView"
         android:textColor="#FFFFFF"
-        android:textSize="48sp"
+        android:textSize="28sp"
         android:textStyle="bold"
-        app:fontFamily="cursive" />
+        app:fontFamily="sans-serif-smallcaps" />
 
     <TextView
         android:id="@+id/time1_text"
-        android:layout_width="100dp"
+android:gravity="center"
+        android:layout_width="130dp"
         android:layout_height="40dp"
-android:layout_marginLeft="30dp"
         android:layout_below="@+id/tablet_name_text"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
         android:text="TextView"
         android:textColor="#37474F"
         android:textSize="22sp"
-        app:fontFamily="sans-serif-smallcaps"
-        />
+        app:fontFamily="sans-serif-smallcaps" />
 
     <TextView
         android:id="@+id/time2_text"
-        android:layout_width="100dp"
+        android:gravity="center"
+        android:layout_width="130dp"
         android:layout_height="40dp"
         android:layout_below="@+id/tablet_name_text"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/time1_text"
         android:layout_toRightOf="@+id/time1_text"
@@ -51,11 +53,13 @@ android:layout_marginLeft="30dp"
 
     <TextView
         android:id="@+id/time3_text"
-        android:layout_width="100dp"
+        android:layout_width="130dp"
         android:layout_height="40dp"
+        android:gravity="center"
+
         android:layout_below="@+id/tablet_name_text"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/time2_text"
         android:layout_toRightOf="@+id/time2_text"
