--- a/app/src/main/res/layout/my_list.xml
+++ b/app/src/main/res/layout/my_list.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:layout_width="wrap_content"
+<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/labSecondary"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:elevation="15dp"
@@ -19,8 +20,9 @@
         android:layout_row="0"
         android:layout_column="0"
         android:text="TextView"
-        android:textSize="18sp"
-        android:textColor="@color/labText"/>
+        android:textColor="@color/labText"
+        android:textSize="16sp"
+        app:fontFamily="sans-serif-condensed-medium" />
 
     <TextView
         android:id="@+id/lab_rhs"
@@ -30,8 +32,9 @@
         android:layout_column="2"
         android:layout_marginLeft="0dp"
         android:text="TextView"
-        android:textSize="18sp"
-        android:textColor="@color/labText"/>
+        android:textColor="@color/labText"
+        android:textSize="16sp"
+        app:fontFamily="sans-serif-condensed-medium" />
 
     <Button
         android:id="@+id/delete_button_listview"
