--- a/app/src/main/res/layout/bloodtracking1.xml
+++ b/app/src/main/res/layout/bloodtracking1.xml
@@ -6,17 +6,19 @@
     android:layout_height="match_parent"
     android:layout_margin="5dp"
     android:padding="5dp">
+
     <TextView
+        android:id="@+id/dateandday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/dateandday"
-        android:textSize="24sp"
-        android:textStyle="normal"
-        android:typeface="normal"
-        app:fontFamily="sans-serif-smallcaps"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginStart="5dp">
+        android:layout_marginTop="10dp"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:typeface="normal"
+        app:fontFamily="sans-serif-smallcaps">
 
     </TextView>
 <LinearLayout
@@ -24,6 +26,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/parentLinearLayout2"
+    android:elevation="15dp"
+    android:layout_margin="10dp"
+    android:background="@color/labSecondary"
+
     >
 
 </LinearLayout>
