--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,16 @@
     android:id="@+id/main_relout"
     >
 
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:text="No List Entered"
+    android:textSize="22dp"
+    android:textColor="#bdbdbd"
+    android:id="@+id/noListEnteredText">
 
+</TextView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
@@ -28,6 +37,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/listview_medications"
+android:layout_marginBottom="55dp"
     >
     <ListView
         android:layout_width="match_parent"
@@ -57,13 +67,23 @@
         android:backgroundTint="#e53935"
         android:src="@drawable/syringeicon"/>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/info"
+            android:layout_alignParentBottom="true"
+            android:backgroundTint="#bdbdbd"
+            android:layout_alignParentLeft="true"
+            android:onClick="gotoinfopage"
+            android:src="@drawable/info_icon"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+
         android:id="@+id/fab_tab"
-        android:layout_alignParentStart="true"
         android:backgroundTint="#1976d2"
         android:src="@drawable/alarm96"/>
 </RelativeLayout>
