--- a/app/src/main/res/layout/full_result_views_layout.xml
+++ b/app/src/main/res/layout/full_result_views_layout.xml
@@ -2,36 +2,41 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:layout_margin="5dp"
     android:padding="5dp">
+
     <TextView
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
         android:id="@+id/textView"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="0"
+        android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:textColor="@color/labTextHeading"
-        android:textSize="18sp"
+        android:layout_marginBottom="5dp"
+        android:textColor="#131212"
+        android:textSize="19sp"
         android:textStyle="normal"
-        app:fontFamily="sans-serif-condensed"/>
+        android:theme="@style/MyEditText"
+        app:fontFamily="sans-serif-condensed-medium" />
 
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="90dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_row="0"
         android:layout_column="1"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginBottom="5dp"
         android:textColor="@color/labTextHeading"
-        android:textSize="18sp"
+        android:textSize="22sp"
         android:textStyle="bold"
-        app:fontFamily="sans-serif-condensed"/>
+        android:theme="@style/MyEditText"
+        app:fontFamily="sans-serif-smallcaps" />
 
 </GridLayout>
