--- a/app/src/main/res/layout/activity_info_page.xml
+++ b/app/src/main/res/layout/activity_info_page.xml
@@ -33,8 +33,8 @@
 
     <ImageView
         android:id="@+id/appImage"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_below="@id/textView3"
         android:layout_centerHorizontal="true"
         android:background="@drawable/web_hi_res_512"
@@ -44,11 +44,119 @@
         android:minHeight="200dp">
 
     </ImageView>
-    <TextView
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/appImage"
-        android:id="@+id/about"></TextView>
+        android:layout_above="@+id/feedback"
+        android:id="@+id/upcominf_features"
+        android:paddingLeft="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Upcoming Features"
+            android:textColor="@color/labText"
+            android:textSize="20sp"
+            android:id="@+id/workingId">
+        </TextView>
+
+        <TextView
+            android:id="@+id/updownButton"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginBottom="3dp"
+            android:layout_toRightOf="@+id/workingId"
+            android:background="#fafafa"
+            android:drawableTop="@drawable/down"
+            android:onClick="show">
+
+        </TextView>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:id="@+id/featuresList"
+    android:visibility="gone"
+    android:layout_below="@id/workingId">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save your BloodWork as PDF"
+            android:padding="2dp">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:text="Remainder to refill your pills">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:text="Doctor's comment section">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:text="Snooze in Medication Notification">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:text="UI enhancements. And yes, Dark theme.">
+
+        </TextView>
+
+</LinearLayout>
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_above="@+id/upcominf_features"
+        android:padding="10dp">
+
+
+        <Switch
+            android:id="@+id/simpleSwitch"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/SIunitissettext"
+            android:checked="true"
+            android:switchPadding="5dp"
+            android:text="Traditional Unit"
+            android:textColor="@color/labText"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            android:theme="@style/SCBSwitch" />
+    <TextView
+        android:id="@+id/SIunitissettext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:text="[(mg/dl),(u/l), etc.]">
+    </TextView>
+
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/feedback"
