--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,20 @@
         <item name="colorControlNormal">@color/medicationText</item>
         <item name="colorControlActivated">@color/medicationText</item>
     </style>
+    <style name="SCBSwitch" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">@color/colorAccent</item>
 
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">@color/colorAccent
+        </item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">@color/colorAccent
+        </item>
+    </style>
+        <style name="SplashTheme" parent="AppTheme">
+            <item name="android:windowBackground">@drawable/splash</item>
+        </style>
 
 </resources>
