--- a/app/src/main/res/layout/activity_3.xml
+++ b/app/src/main/res/layout/activity_3.xml
@@ -120,11 +120,40 @@
         </LinearLayout>
 
         </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTimer"
+        android:layout_below="@id/second_main"
+        android:padding="3dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/editTabletName"
+            android:visibility="gone"
+            android:textColor="@color/medicationText"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            app:fontFamily="sans-serif"/>
+        <ImageButton
+            android:id="@+id/editDeleteButton"
+            android:layout_toRightOf="@+id/editTabletName"
+            android:visibility="gone"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/editimeicon"
+            />
+    </RelativeLayout>
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/second_main">
+        android:layout_below="@+id/editTimer">
         <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -161,7 +190,5 @@
             android:onClick="back_to_main"
             android:src="@drawable/baseline_done_white_48dp"
             android:backgroundTint="#00c853"/>
-
-
     </RelativeLayout>
 </RelativeLayout>
