--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -15,7 +15,7 @@ android:layout_height="match_parent"
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -25,21 +25,39 @@ android:layout_height="match_parent"
         android:layout_marginBottom="2.5dp">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/labResultMainHeading"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:textColor="#FFFFFF"
-            android:textSize="28sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             android:typeface="normal"
             app:fontFamily="sans-serif-smallcaps" />
-    </LinearLayout>
+
+        <TextView
+            android:id="@+id/datePicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:paddingLeft="2dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="5dp"
+            android:paddingRight="5dp"
+            android:textColor="#eeeeee"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:typeface="normal"
+            app:fontFamily="sans-serif-smallcaps"/>
+    </RelativeLayout>
 
 
     <LinearLayout
