--- a/app/src/main/res/layout/bloodtracking1.xml
+++ b/app/src/main/res/layout/bloodtracking1.xml
@@ -15,8 +15,8 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
         android:textColor="#000000"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:textSize="19sp"
+        android:textStyle="normal"
         android:typeface="normal"
         app:fontFamily="sans-serif-smallcaps">
 
