--- a/app/src/main/res/layout/activity_info_page.xml
+++ b/app/src/main/res/layout/activity_info_page.xml
@@ -60,56 +60,40 @@
             android:id="@+id/workingId">
         </TextView>
 
-        <ImageButton
-            android:id="@+id/updownButton"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="5.5dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginRight="3dp"
-            android:layout_marginBottom="3dp"
-            android:layout_toRightOf="@+id/workingId"
-            android:layout_toEndOf="@+id/workingId"
-            android:background="@drawable/up"
-            android:onClick="show"
-            android:paddingTop="3dp">
 
-        </ImageButton>
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/featuresList"
-    android:visibility="gone"
+    android:visibility="visible"
     android:layout_below="@id/workingId">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Save your BloodWork as PDF"
-            android:padding="2dp">
+            android:padding="1dp">
 
         </TextView>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="2dp"
+            android:padding="1dp"
             android:text="Reminder to refill your pills">
 
         </TextView>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp"
+        android:padding="1dp"
         android:text="Medication Reminder by day">
 
     </TextView>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="2dp"
+            android:padding="1dp"
             android:text="Doctor's comment section">
 
         </TextView>
@@ -117,7 +101,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="2dp"
+            android:padding="1dp"
             android:text="Snooze in Medication Notification">
 
         </TextView>
@@ -125,7 +109,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="2dp"
+            android:padding="1dp"
             android:text="UI enhancements. And yes, Dark theme.">
 
         </TextView>
@@ -139,7 +123,7 @@
         android:layout_below="@+id/appImage"
         android:padding="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:id="@+id/switch_layout">
 
 
